--- a/hormigon.html
+++ b/hormigon.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,17 +7,17 @@
     <title>LFConstrucciones</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link rel="stylesheet" href="/css/estilos.css">
 </head>
 
 <body>
-
     <!-- <<< ----------- * ----------- Header PC ----------- * ----------- >>> -->
     <header class="header">
 
         <!-- <<< ----------- Logo ----------- >>> -->
         <div class="mr10">
-            <a href="#"><img class="img-logo" src="/img/logo-ok.png" alt="logo"></a>
+            <a href="/index.html"><img class="img-logo" src="/img/logo-ok.png" alt="logo"></a>
         </div>
         <!-- <<< ----------- Fin Logo ----------- >>> -->
 
@@ -180,18 +180,16 @@
 
     <!-- <<< ----------- * ----------- Fin Header Celular ----------- * ----------- >>> -->
 
-    <!-- <<< ----------- * ----------- Main ----------- * ----------- >>> -->
     <main>
         <div class="container">
-
             <!-- Imagen Principal -->
             <div class="centrado mrt30">
-                <img class="img-principal" src="/img/planificacion2.png" alt="img-principal">
+                <img class="img-principal" src="/img/hormigon.jpg" alt="img-principal">
             </div>
             <!-- Fin Imagen Principal -->
 
             <!-- Presentación -->
-            <h1 class="centrado mrt30">LFConstrucciones Integrales</h1>
+            <h1 class="centrado mrt30">Hormigón Armado</h1>
 
             <h2 class="centrado mrt30">Trabajamos con diseño propio y Garantía Escrita</h2>
 
@@ -208,51 +206,102 @@
             </div>
             <!-- Fin Presentación -->
 
-            <!-- Servicios -->
-            <div class="mrt30">
-                <h2 class="centrado">Conocé nuestros servicios</h2>
-            </div>
-
-            <!-- Cards -->
             <div class="contenedor-cards">
                 <div class="centrado cards">
-                    <div class="mrt30">
-                        <a href="/hormigon.html"><img class="img-tarjetas" src="/img/tarjetas/hormigon.png"
-                                alt="hormigon"></a>
+                    <div class="mrt30 card">
+                        <div class="mr10">
+                            <h4 class="mrt10"><b>LOSAS</b></h4>
+                            <img class="img-tarjetas" src="/img/hormigon/losas.jpg" alt="losas">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                        </div>
                     </div>
-                    <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/herreria.png" alt="herreria"></a>
+                    <div class="card mrt30 ">
+                        <div class="mr10">
+                            <h4 class="mrt10"><b>ENCADENADOS</b></h4>
+                            <img class="img-tarjetas mrt10" src="/img/hormigon/encadenado.jpg" alt="encadenado">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                        </div>
                     </div>
-                    <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/techos.png" alt="techos"></a>
+                    <div class="mrt30 card">
+                        <div class="mr10">
+                            <h4 class="mrt10"><b>VIGAS</b></h4>
+                            <img class="img-tarjetas" src="/img/hormigon/vigas.jpeg" alt="vigas">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                        </div>
                     </div>
-                    <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/pintura.png" alt="pintura"></a>
+                    <div class="mrt30 card">
+                        <div class="mr10">
+                            <h4 class="mrt10"><b>COLUMNAS</b></h4>
+                            <img class="img-tarjetas" src="/img/hormigon/columnas.jpg" alt="columnas">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                        </div>
                     </div>
-                    <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/plomeria.png" alt="plomeria"></a>
+                    <div class="mrt30 card">
+                        <div class="mr10">
+                            <h4 class="mrt10"><b>VIGUETAS</b></h4>
+                            <img class="img-tarjetas" src="/img/hormigon/viguetas.jpg" alt="viguetas">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                        </div>
                     </div>
-                    <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/electricidad.png" alt="plomeria"></a>
+                    <div class="mrt30 card">
+                        <div class="mr10">
+                            <h4 class="mrt10"><b>ESCALERAS</b></h4>
+                            <img class="img-tarjetas" src="/img/hormigon/escalera.jpeg" alt="escalera">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="mrt30 card">
+                        <div class="mr10">
+                            <h4 class="mrt10"><b>TABIQUES</b></h4>
+                            <img class="img-tarjetas" src="/img/hormigon/tabiques.jpeg" alt="tabiques">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="mrt30 card">
+                        <div class="mr10">
+                            <h4 class="mrt10"><b>TRONCOS</b></h4>
+                            <img class="img-tarjetas" src="/img/hormigon/tronco.jpg" alt="troncos">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="mrt30 card">
+                        <div class="mr10">
+                            <h4 class="mrt10"><b>ZAPATAS</b></h4>
+                            <img class="img-tarjetas" src="/img/hormigon/zapata.jpg" alt="zapatas">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Fin Cards -->
 
-        <div class="centrado mrt30">
-            <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
-                    alt="whatsapp"><b>CONTACTANOS</b></a>
+        <div class="presentacion mrt30">
+            <h5 class="text-indent justify"><b>LFConstrucciones</b>, es una empresa en constante crecimiento,
+                ofreciendo una amplia gama de servicios en el sector de la construcción y sus derivados. Nuestro
+                equipo de profesionales altamente capacitados y experimentados está preparado para abordar cualquier
+                situación con respuestas rápidas y eficientes.</h4>
         </div>
-        <!-- Fin Servicios -->
+
+        </div>
     </main>
+
     <!-- <<< ----------- * ----------- Fin Main ----------- * ----------- >>> -->
 
     <!-- <<< ----------- * ----------- Footer ----------- * ----------- >>> -->
     <footer>
         <div class="footer mrt30">
             <div class="mr20">
-                <a href="#"><img class="logo-footer" src="/img/logo-ok2.png" alt="logo"></a>
+                <a href="/index.html"><img class="logo-footer" src="/img/logo-ok2.png" alt="logo"></a>
             </div>
             <div class="text-footer mr20">
                 <p>Agregar dirección</p>
@@ -272,6 +321,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
