--- a/hormigon.html
+++ b/hormigon.html
@@ -30,15 +30,15 @@
                     <p class="text-menu">Hormigón</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Losas</a></li>
-                    <li><a class="dropdown-item" href="#">Encadenados</a></li>
-                    <li><a class="dropdown-item" href="#">Vigas</a></li>
-                    <li><a class="dropdown-item" href="#">Columnas</a></li>
-                    <li><a class="dropdown-item" href="#">Viguetas</a></li>
-                    <li><a class="dropdown-item" href="#">Escaleras</a></li>
-                    <li><a class="dropdown-item" href="#">Tabiques</a></li>
-                    <li><a class="dropdown-item" href="#">Troncos</a></li>
-                    <li><a class="dropdown-item" href="#">Zapatas</a></li>
+                    <li><a class="dropdown-item" href="#losas">Losas</a></li>
+                    <li><a class="dropdown-item" href="#encadenados">Encadenados</a></li>
+                    <li><a class="dropdown-item" href="#vigas">Vigas</a></li>
+                    <li><a class="dropdown-item" href="#columnas">Columnas</a></li>
+                    <li><a class="dropdown-item" href="#viguetas">Viguetas</a></li>
+                    <li><a class="dropdown-item" href="#escaleras">Escaleras</a></li>
+                    <li><a class="dropdown-item" href="#tabiques">Tabiques</a></li>
+                    <li><a class="dropdown-item" href="#troncos">Troncos</a></li>
+                    <li><a class="dropdown-item" href="#zapatas">Zapatas</a></li>
                 </ul>
             </div>
 
@@ -48,13 +48,13 @@
                     <p class="text-menu">Herrería</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Portones</a></li>
-                    <li><a class="dropdown-item" href="#">Rejas</a></li>
-                    <li><a class="dropdown-item" href="#">Escaleras</a></li>
-                    <li><a class="dropdown-item" href="#">Pergolas</a></li>
-                    <li><a class="dropdown-item" href="#">Parrillas</a></li>
-                    <li><a class="dropdown-item" href="#">Puertas de Parrilla</a></li>
-                    <li><a class="dropdown-item" href="#">Cestos de Residuos</a></li>
+                    <li><a class="dropdown-item" href="/herreria.html#portones">Portones</a></li>
+                    <li><a class="dropdown-item" href="/herreria.html#rejas">Rejas</a></li>
+                    <li><a class="dropdown-item" href="/herreria.html#escaleras">Escaleras</a></li>
+                    <li><a class="dropdown-item" href="/herreria.html#pergolas">Pérgolas</a></li>
+                    <li><a class="dropdown-item" href="/herreria.html#parrillas">Parrillas</a></li>
+                    <li><a class="dropdown-item" href="/herreria.html#puerta-parrilla">Puertas de Parrilla</a></li>
+                    <li><a class="dropdown-item" href="/herreria.html#cestos">Cestos de Residuos</a></li>
                 </ul>
             </div>
 
@@ -64,8 +64,8 @@
                     <p class="text-menu">Techos</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Teja</a></li>
-                    <li><a class="dropdown-item" href="#">Chapa</a></li>
+                    <li><a class="dropdown-item" href="/techos.html#tejas">Teja</a></li>
+                    <li><a class="dropdown-item" href="/techos.html#chapa">Chapa</a></li>
                 </ul>
             </div>
 
@@ -75,10 +75,10 @@
                     <p class="text-menu">Pintura</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Exterior</a></li>
-                    <li><a class="dropdown-item" href="#">Interior</a></li>
-                    <li><a class="dropdown-item" href="#">Impermeabilización</a></li>
-                    <li><a class="dropdown-item" href="#">Trabajos en Altura</a></li>
+                    <li><a class="dropdown-item" href="/pintura.html#exterior">Exterior</a></li>
+                    <li><a class="dropdown-item" href="/pintura.html#interior">Interior</a></li>
+                    <li><a class="dropdown-item" href="/pintura.html#impermeabilizacion">Impermeabilización</a></li>
+                    <li><a class="dropdown-item" href="/pintura.html#altura">Trabajos en Altura</a></li>
                 </ul>
             </div>
 
@@ -144,7 +144,7 @@
 
     <header class="menu-hamburguesa">
         <!-- <<< ----------- Logo ----------- >>> -->
-        <a href="#"><img class="img-logo mr10" src="img/logo-ok.png" alt="logo"></a>
+        <a href="/index.html"><img class="img-logo mr10" src="img/logo-ok.png" alt="logo"></a>
         <!-- <<< ----------- Fin Logo ----------- >>> -->
 
         <!-- <<< ----------- Boton Menu Hamburguesa ----------- >>> -->
@@ -154,23 +154,25 @@
             <button id="cerrar" class="cerrar-menu"><img class="img-cerrar" src="/img/iconos/cerrar.png"
                     alt="cerrar"></button>
             <ul class="nav-list">
-                <li><a href="#" class="dos-columnas"><img class="img-ico" src="/img/iconos/hormigonera.png"
+                <li><a href="/index.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/inicio.png"
+                            alt="inicio">Inicio</a></li>
+                <li><a href="/hormigon.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/hormigonera.png"
                             alt="hormigonera">Hormigón</a></li>
-                <li><a href="#" class="dos-columnas"><img class="img-ico" src="/img/iconos/porton.png"
+                <li><a href="/herreria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/porton.png"
                             alt="porton">Herrería</a></li>
-                <li><a href="#" class="dos-columnas"><img class="img-ico" src="/img/iconos/techo.png"
+                <li><a href="/techos.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/techo.png"
                             alt="techo">Techos</a></li>
-                <li><a href="#" class="dos-columnas"><img class="img-ico" src="/img/iconos/brocha.png"
+                <li><a href="/pintura.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/brocha.png"
                             alt="brocha">Pintura</a></li>
-                <li><a href="#" class="dos-columnas"><img class="img-ico" src="/img/iconos/grifo.png"
+                <li><a href="/plomeria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/grifo.png"
                             alt="grifo">Plomería</a></li>
-                <li><a href="#" class="dos-columnas"><img class="img-ico" src="/img/iconos/electricidad.png"
-                            alt="electricidad">Electricidad</a></li>
-                <li><a href="#" class="dos-columnas"><img class="img-ico" src="/img/iconos/galeria.png"
+                <li><a href="/electricidad.html" class="dos-columnas"><img class="img-ico"
+                            src="/img/iconos/electricidad.png" alt="electricidad">Electricidad</a></li>
+                <li><a href="/galeria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/galeria.png"
                             alt="galeria">Galería</a></li>
-                <li><a href="#" class="dos-columnas"><img class="img-ico" src="/img/iconos/nosotros.png"
-                            alt="nosotros">Sobre Nosotros</a></li>
-                <li><a href="#" class="dos-columnas"><img class="img-ico" src="/img/iconos/atcliente.png"
+                <li><a href="/sobreNosotros.html" class="dos-columnas"><img class="img-ico"
+                            src="/img/iconos/nosotros.png" alt="nosotros">Sobre Nosotros</a></li>
+                <li><a href="/contacto.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/atcliente.png"
                             alt="atcliente">Contacto</a></li>
             </ul>
         </nav>
@@ -182,14 +184,16 @@
 
     <main>
         <div class="container">
+
+
+            <!-- Presentación -->
+            <h1 class="centrado mrt30">Hormigón Armado</h1>
+
             <!-- Imagen Principal -->
             <div class="centrado mrt30">
                 <img class="img-principal" src="/img/hormigon.jpg" alt="img-principal">
             </div>
             <!-- Fin Imagen Principal -->
-
-            <!-- Presentación -->
-            <h1 class="centrado mrt30">Hormigón Armado</h1>
 
             <h2 class="centrado mrt30">Trabajamos con diseño propio y Garantía Escrita</h2>
 
@@ -208,89 +212,84 @@
 
             <div class="contenedor-cards">
                 <div class="centrado cards">
-                    <div class="mrt30 card">
+                    <div class="" id="losas">
                         <div class="mr10">
-                            <h4 class="mrt10"><b>LOSAS</b></h4>
-                            <img class="img-tarjetas" src="/img/hormigon/losas.jpg" alt="losas">
+                            <img class="img-tarjetas mrt10" src="/img/hormigon/losas.png" alt="losas">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
-                    <div class="card mrt30 ">
+                    <div class="" id="encadenados">
                         <div class="mr10">
-                            <h4 class="mrt10"><b>ENCADENADOS</b></h4>
-                            <img class="img-tarjetas mrt10" src="/img/hormigon/encadenado.jpg" alt="encadenado">
+                            <img class="img-tarjetas mrt10" src="/img/hormigon/encadenados.png" alt="encadenado">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
-                    <div class="mrt30 card">
+                    <div class="" id="vigas">
                         <div class="mr10">
-                            <h4 class="mrt10"><b>VIGAS</b></h4>
-                            <img class="img-tarjetas" src="/img/hormigon/vigas.jpeg" alt="vigas">
+                            <img class="img-tarjetas" src="/img/hormigon/vigas.png" alt="vigas">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
-                    <div class="mrt30 card">
+                    <div class="" id="columnas">
                         <div class="mr10">
-                            <h4 class="mrt10"><b>COLUMNAS</b></h4>
-                            <img class="img-tarjetas" src="/img/hormigon/columnas.jpg" alt="columnas">
+                            <img class="img-tarjetas" src="/img/hormigon/columnas.png" alt="columnas">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
-                    <div class="mrt30 card">
+                    <div class="" id="viguetas">
                         <div class="mr10">
-                            <h4 class="mrt10"><b>VIGUETAS</b></h4>
-                            <img class="img-tarjetas" src="/img/hormigon/viguetas.jpg" alt="viguetas">
+                            <img class="img-tarjetas" src="/img/hormigon/viguetas.png" alt="viguetas">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
-                    <div class="mrt30 card">
+                    <div class="" id="escaleras">
                         <div class="mr10">
-                            <h4 class="mrt10"><b>ESCALERAS</b></h4>
-                            <img class="img-tarjetas" src="/img/hormigon/escalera.jpeg" alt="escalera">
+                            <img class="img-tarjetas" src="/img/hormigon/escaleras.png" alt="escalera">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
-                    <div class="mrt30 card">
+                    <div class="" id="tabiques">
                         <div class="mr10">
-                            <h4 class="mrt10"><b>TABIQUES</b></h4>
-                            <img class="img-tarjetas" src="/img/hormigon/tabiques.jpeg" alt="tabiques">
+                            <img class="img-tarjetas" src="/img/hormigon/tabiques.png" alt="tabiques">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
-                    <div class="mrt30 card">
+                    <div class="" id="troncos">
                         <div class="mr10">
-                            <h4 class="mrt10"><b>TRONCOS</b></h4>
-                            <img class="img-tarjetas" src="/img/hormigon/tronco.jpg" alt="troncos">
+                            <img class="img-tarjetas" src="/img/hormigon/troncos.png" alt="troncos">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
-                    <div class="mrt30 card">
+                    <div class="" id="zapatas">
                         <div class="mr10">
-                            <h4 class="mrt10"><b>ZAPATAS</b></h4>
-                            <img class="img-tarjetas" src="/img/hormigon/zapata.jpg" alt="zapatas">
+                            <img class="img-tarjetas" src="/img/hormigon/zapatas.png" alt="zapatas">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b>PEDIR PRESUPUESTO</b></a>
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Fin Cards -->
 
-        <div class="presentacion mrt30">
-            <h5 class="text-indent justify"><b>LFConstrucciones</b>, es una empresa en constante crecimiento,
-                ofreciendo una amplia gama de servicios en el sector de la construcción y sus derivados. Nuestro
-                equipo de profesionales altamente capacitados y experimentados está preparado para abordar cualquier
-                situación con respuestas rápidas y eficientes.</h4>
-        </div>
+            <!-- Fin Cards -->
+
+            <div class="presentacion mrt30">
+                <h5 class="text-indent justify">En <b>LFConstrucciones</b>, realizamos servicios para empresas y
+                    particulares. Estamos capacitados para brindar soluciones eficaces y de alta calidad. Años de
+                    experiencia nos avalan. </h4>
+            </div>
+
+            <div class="presentacion mrt30">
+                <h5 class="text-indent justify">Trabajamos con diseño propio y <b>Garantía Escrita.</b> Solicité
+                    presupuesto <b>Sin Cargo.</b> Estamos para ayudarlo con cualquier duda y/o consulta que tenga.</h4>
+            </div>
 
         </div>
     </main>
@@ -301,10 +300,11 @@
     <footer>
         <div class="footer mrt30">
             <div class="mr20">
-                <a href="/index.html"><img class="logo-footer" src="/img/logo-ok2.png" alt="logo"></a>
+                <a href="/index.html"><img class="logo-footer" src="/img/logo-ok.png" alt="logo"></a>
             </div>
             <div class="text-footer mr20">
-                <p>Agregar dirección</p>
+                <p>Las Amapolas 1923 - Tristan Suarez</p>
+                <p>Buenos Aires - Argentina</p>
                 <p>© Copyright 2024 - LFConstrucciones</p>
                 <p>Todos los derechos reservados</p>
             </div>
