--- a/techos.html
+++ b/techos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,17 +7,17 @@
     <title>LFConstrucciones</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link rel="stylesheet" href="/css/estilos.css">
 </head>
 
 <body>
-
     <!-- <<< ----------- * ----------- Header PC ----------- * ----------- >>> -->
     <header class="header">
 
         <!-- <<< ----------- Logo ----------- >>> -->
         <div class="mr10">
-            <a href="#"><img class="img-logo" src="/img/logo-ok.png" alt="logo"></a>
+            <a href="/index.html"><img class="img-logo" src="/img/logo-ok.png" alt="logo"></a>
         </div>
         <!-- <<< ----------- Fin Logo ----------- >>> -->
 
@@ -27,11 +27,11 @@
             <div class="dropdown">
                 <div class="btn dropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img class="img-ico" src="/img/iconos/hormigonera.png" alt="hormigonera">
-                    <p class="text-menu">Hormigón</p>
+                    <p class="text-menu">Techos</p>
                 </div>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="/hormigon.html#losas">Losas</a></li>
-                    <li><a class="dropdown-item" href="/hormigon.html#encadenado">Encadenados</a></li>
+                    <li><a class="dropdown-item" href="/hormigon.html#encadenados">Encadenados</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#vigas">Vigas</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#columnas">Columnas</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#viguetas">Viguetas</a></li>
@@ -144,7 +144,7 @@
 
     <header class="menu-hamburguesa">
         <!-- <<< ----------- Logo ----------- >>> -->
-        <a href="#"><img class="img-logo mr10" src="img/logo-ok.png" alt="logo"></a>
+        <a href="/index.html"><img class="img-logo mr10" src="img/logo-ok.png" alt="logo"></a>
         <!-- <<< ----------- Fin Logo ----------- >>> -->
 
         <!-- <<< ----------- Boton Menu Hamburguesa ----------- >>> -->
@@ -155,7 +155,7 @@
                     alt="cerrar"></button>
             <ul class="nav-list">
                 <li><a href="/index.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/inicio.png"
-                    alt="inicio">Inicio</a></li>
+                            alt="inicio">Inicio</a></li>
                 <li><a href="/hormigon.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/hormigonera.png"
                             alt="hormigonera">Hormigón</a></li>
                 <li><a href="/herreria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/porton.png"
@@ -166,12 +166,12 @@
                             alt="brocha">Pintura</a></li>
                 <li><a href="/plomeria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/grifo.png"
                             alt="grifo">Plomería</a></li>
-                <li><a href="/electricidad.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/electricidad.png"
-                            alt="electricidad">Electricidad</a></li>
+                <li><a href="/electricidad.html" class="dos-columnas"><img class="img-ico"
+                            src="/img/iconos/electricidad.png" alt="electricidad">Electricidad</a></li>
                 <li><a href="/galeria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/galeria.png"
                             alt="galeria">Galería</a></li>
-                <li><a href="/sobreNosotros.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/nosotros.png"
-                            alt="nosotros">Sobre Nosotros</a></li>
+                <li><a href="/sobreNosotros.html" class="dos-columnas"><img class="img-ico"
+                            src="/img/iconos/nosotros.png" alt="nosotros">Sobre Nosotros</a></li>
                 <li><a href="/contacto.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/atcliente.png"
                             alt="atcliente">Contacto</a></li>
             </ul>
@@ -182,16 +182,16 @@
 
     <!-- <<< ----------- * ----------- Fin Header Celular ----------- * ----------- >>> -->
 
-    <!-- <<< ----------- * ----------- Main ----------- * ----------- >>> -->
     <main>
         <div class="container">
 
+
             <!-- Presentación -->
-            <h1 class="centrado mrt30">LFConstrucciones Integrales</h1>
+            <h1 class="centrado mrt30">Techos</h1>
 
             <!-- Imagen Principal -->
             <div class="centrado mrt30">
-                <img class="img-principal" src="/img/planificacion2.png" alt="img-principal">
+                <img class="img-principal" src="/img/techos.jpeg" alt="img-principal">
             </div>
             <!-- Fin Imagen Principal -->
 
@@ -210,51 +210,48 @@
             </div>
             <!-- Fin Presentación -->
 
-            <!-- Servicios -->
-            <div class="mrt30">
-                <h2 class="centrado">Conocé nuestros servicios</h2>
-            </div>
-
-            <!-- Cards -->
             <div class="contenedor-cards">
                 <div class="centrado cards">
-                    <div class="mrt30">
-                        <a href="/hormigon.html"><img class="img-tarjetas" src="/img/tarjetas/hormigon.png"
-                                alt="hormigon"></a>
+                    <div class="" id="tejas">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/techos/teja.png" alt="teja">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
                     </div>
-                    <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/herreria.png" alt="herreria"></a>
-                    </div>
-                    <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/techos.png" alt="techos"></a>
-                    </div>
-                    <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/pintura.png" alt="pintura"></a>
-                    </div>
-                    <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/plomeria.png" alt="plomeria"></a>
-                    </div>
-                    <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/electricidad.png" alt="plomeria"></a>
+                    <div class="" id="chapa">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/techos/chapa.png" alt="chapa">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Fin Cards -->
 
-        <div class="centrado mrt30">
-            <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
-                    alt="whatsapp"><b>CONTACTANOS</b></a>
+            <!-- Fin Cards -->
+
+            <div class="presentacion mrt30">
+                <h5 class="text-indent justify">En <b>LFConstrucciones</b>, realizamos servicios para empresas y
+                    particulares. Estamos capacitados para brindar soluciones eficaces y de alta calidad. Años de
+                    experiencia nos avalan. </h4>
+            </div>
+
+            <div class="presentacion mrt30">
+                <h5 class="text-indent justify">Trabajamos con diseño propio y <b>Garantía Escrita.</b> Solicité
+                    presupuesto <b>Sin Cargo.</b> Estamos para ayudarlo con cualquier duda y/o consulta que tenga.</h4>
+            </div>
+
         </div>
-        <!-- Fin Servicios -->
     </main>
+
     <!-- <<< ----------- * ----------- Fin Main ----------- * ----------- >>> -->
 
     <!-- <<< ----------- * ----------- Footer ----------- * ----------- >>> -->
     <footer>
         <div class="footer mrt30">
             <div class="mr20">
-                <a href="#"><img class="logo-footer" src="/img/logo-ok.png" alt="logo"></a>
+                <a href="/index.html"><img class="logo-footer" src="/img/logo-ok.png" alt="logo"></a>
             </div>
             <div class="text-footer mr20">
                 <p>Las Amapolas 1923 - Tristan Suarez</p>
@@ -275,6 +272,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
